Moving h1 tags to a script

--- a/framed.html
+++ b/framed.html
@@ -6,72 +6,13 @@
   </head>
   <body>
 
-    <div class='sizzer'>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    <h1>Framed</h1>
-    <h2>Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.Try to get my dimensions.</h2>
-
-    </div>
+    <script src='http://localhost/Libs/jquery.min.js'></script>
+    <script>
+      $(function() {
+        for ( var i = 0; i < 20; i++ )
+          $( 'body' ).append( "<h1>Hello. I'm inside the iframe.</h1>" );
+      });
+    </script>
 
   </body>
 </html>
