Separating plugin from example

--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,8 @@
     <iframe style='display: block;' src='framed.html'></iframe>
 
     <script src='http://localhost/Libs/jquery.min.js'></script>
-    <script src='iframe-auto-height.js'></script>
+    <script src='autoHeight.js'></script>
+    <script src='script.js'></script>
 
   </body>
 </html>
